--- a/BIZspot-backend/package.json
+++ b/BIZspot-backend/package.json
@@ -7,18 +7,22 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "node .",
+    "start": "set DEVELOPMENT=true && nodemon .",
+    "prod": "set PRODUCTION=true && nodemon .",
     "posttest": "npm run lint && npm audit"
   },
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "dotenv": "^8.2.0",
     "helmet": "^3.10.0",
+    "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
-    "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^3.0.0",
     "loopback-component-explorer": "^6.2.0",
-    "loopback": "^3.22.0"
+    "loopback-connector-mongodb": "^5.2.1",
+    "nodemon": "^2.0.1",
+    "serve-favicon": "^2.0.1",
+    "strong-error-handler": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
