--- a/BIZspot-backend/package.json
+++ b/BIZspot-backend/package.json
@@ -22,6 +22,7 @@
     "loopback-connector-mongodb": "^5.2.1",
     "nodemon": "^2.0.1",
     "serve-favicon": "^2.0.1",
+    "stripe": "^7.14.0",
     "strong-error-handler": "^3.0.0"
   },
   "devDependencies": {
