--- a/BIZspot-frontend/package.json
+++ b/BIZspot-frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "core-js": "^3.4.2",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.0-rc.1",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
