Finished validation of business creation

--- a/BIZspot-frontend/package.json
+++ b/BIZspot-frontend/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "angular-countries": "^1.1.5",
     "core-js": "^3.4.2",
+    "google-libphonenumber": "^3.2.6",
+    "ng-valid-phone": "^1.0.3",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.1",
     "rxjs": "~6.5.3",
