Adding google maps and interaction in search component

--- a/BIZspot-frontend/angular.json
+++ b/BIZspot-frontend/angular.json
@@ -54,7 +54,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "BIZspot-frontend:build:production"
+              "browserTarget": "BIZspot-frontend:build:production",
+              "proxyConfig": "src/proxy.conf.json"
             }
           }
         },
