--- a/BIZspot-frontend/angular.json
+++ b/BIZspot-frontend/angular.json
@@ -20,10 +20,8 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "src/styles.css",
-              "node_modules/primeicons/primeicons.css",
-              "node_modules/primeng/resources/themes/nova-light/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "src/styles.css"
+              
             ],
             "scripts": []
           },
