--- a/BIZspot-frontend/angular.json
+++ b/BIZspot-frontend/angular.json
@@ -18,11 +18,8 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "src/styles.css"
-              
-            ],
+            "assets": ["src/favicon.ico", "src/assets", "src/env.js"],
+            "styles": ["src/styles.css"],
             "scripts": []
           },
           "configurations": {
