--- a/source/package.json
+++ b/source/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "engines": {
-    "node": ">=6"
+    "node": ">=6",
+    "npm": "6.4.1"
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "set DEVELOPMENT=true && nodemon .",
+    "dev": "set DEVELOPMENT=true && nodemon .",
+    "start": "set DEVELOPMENT=true && node .",
     "prod": "set PRODUCTION=true && nodemon .",
-    "posttest": "npm run lint && npm audit"
+    "posttest": "npm run lint && npm audit",
+    "postinstall": "cd client && ng build — aot — prod"
   },
   "dependencies": {
     "compression": "^1.0.3",
