--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular/cli": "~8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@agm/core": "^1.1.0",
     "@angular/animations": "^8.2.14",
     "@angular/common": "^8.2.14",
@@ -29,7 +33,10 @@
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "uuid": "^3.3.3",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "ts-node": "~8.5.2",
+    "tslint": "~5.20.1",
+    "typescript": "~3.5.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.19",
