update client dev depens

--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "start": "set DEVELOPMENT=true && node .",
     "prod": "set PRODUCTION=true && nodemon .",
     "posttest": "npm run lint && npm audit",
-    "postinstall": "cd client && npm i && ng build --aot --prod"
+    "postinstall": "cd client && cd && npm i && ng build --aot --prod"
   },
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular/cli": "~8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@agm/core": "^1.1.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "dotenv": "^8.2.0",
@@ -26,7 +35,8 @@
     "nodemon": "^2.0.1",
     "serve-favicon": "^2.0.1",
     "stripe": "^7.14.0",
-    "strong-error-handler": "^3.0.0"
+    "strong-error-handler": "^3.0.0",
+    "typescript": "~3.5.0"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
