--- a/package.json
+++ b/package.json
@@ -9,20 +9,12 @@
   "scripts": {
     "lint": "eslint .",
     "dev": "set DEVELOPMENT=true && nodemon .",
-    "start": "set DEVELOPMENT=true && node .",
+    "start": "node .",
     "prod": "set PRODUCTION=true && nodemon .",
     "posttest": "npm run lint && npm audit",
     "postinstall": "cd client && npm i && ng build --aot --prod"
   },
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@agm/core": "^1.1.0",
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "dotenv": "^8.2.0",
